--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,8 +1,24 @@
-<h1>Blog Posts</h1>
-<ul>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Your Rails App</title>
+  <%= stylesheet_link_tag 'index' %>
+  <%= csrf_meta_tags %>
+</head>
+
+<body>
+  <h1 class="blog-title">Blog Posts</h1>
+  <ul>
   <% @posts.each do |post| %>
-    <li><%= link_to post.title, post_path(post) %></li>
+    <li>
+      <%= link_to post.title, post_path(post) %>
+      <p><%= post.body %></p>
+    </li>
   <% end %>
 </ul>
 
-<%= link_to 'New Post', new_post_path %>
+
+  <%= link_to 'New Post', new_post_path, class: "new-post-button" %>
+</body>
+
+</html>
