--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,2 +1,7 @@
 <h1><%= @post.title %></h1>
 <p><%= @post.body %></p>
+
+<%= link_to 'Edit', edit_post_path(@post) %> |
+<%= link_to 'Back', posts_path %>
+
+<%= button_to 'Delete', post_path(@post), method: :delete, data: { confirm: 'Are you sure?' } %>
